fix: fix hidden layout toolbars of a nested layout sections inside cards with overflow hidden

--- a/automad/src/client/admin/styles/components/editor/blocks/layout-section.less
+++ b/automad/src/client/admin/styles/components/editor/blocks/layout-section.less
@@ -32,7 +32,9 @@
  * Licensed under the MIT license.
  */
 
-.am-c-ed-bl-layout-section {
+@layout-section: am-c-ed-bl-layout-section;
+
+.@{layout-section} {
 	position: relative;
 	display: flex;
 	flex-direction: column;
@@ -267,8 +269,20 @@
 				box-shadow: @am-shadow;
 			}
 
-			&--overflow-hidden > .codex-editor > .codex-editor__redactor {
-				overflow: clip;
+			// When card overflow is set to be hidden, it is not possible to
+			// just make the entire card overflow: hidden. That would also cut
+			// a possibly nested layout section toolbar. Instead, the first block
+			// should inherit the border-radius and itself is overflow: hidden.
+			&--overflow-hidden
+				> .codex-editor
+				> .codex-editor__redactor
+				> .am-style--stretched:first-child:not(:has(.@{layout-section}))
+				.ce-block__content
+				.cdx-block {
+				--radius: ~'calc(var(--borderRadius, 0) - var(--borderWidth, 0))';
+				border-top-left-radius: var(--radius);
+				border-top-right-radius: var(--radius);
+				overflow: hidden;
 			}
 
 			&--card > .codex-editor > .codex-editor__redactor {
